<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    tools:context=".ui.authentication.SignInActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_in"
        android:textColor="@color/colorThemeFont"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/signInDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/sign_in_description"
        android:textColor="@color/colorThemeFont"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInLabel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInDescription">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/user_name"
            android:textColor="@color/colorThemeFont"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvUserNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1"
                android:hint="@string/text_hint"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorLoginDataFont"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="16dp"
            android:background="@color/colorUserAuthenticationDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvUserNameLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPasswordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleTint="@color/colorThemeIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/text_hint"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/colorLoginDataFont"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textColor="@color/colorThemeFont"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        style="@style/AuthenticationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/authentication_button_height"
        android:layout_marginBottom="130dp"
        android:enabled="false"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/panelDetail"
        app:layout_constraintStart_toStartOf="@+id/panelDetail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/roboto_medium"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorLoginFont"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/panelDetail"
        app:layout_constraintStart_toStartOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <include
        android:id="@+id/pbSignIn"
        layout="@layout/lay_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>