<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    tools:context=".ui.authentication.SignInActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUpLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up"
        android:textColor="@color/colorThemeFont"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUpLabel">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUserNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/user_name"
            android:textColor="@color/colorThemeFont"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvUserNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/text_hint"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorLoginDataFont"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="16dp"
            android:background="@color/colorUserAuthenticationDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvUserNameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/first_name"
            android:textColor="@color/colorThemeFont"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvFirstNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/text_hint"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorLoginDataFont"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="16dp"
            android:background="@color/colorUserAuthenticationDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstNameLabel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLastNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/last_name"
            android:textColor="@color/colorThemeFont"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvLastNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/text_hint"
                android:imeOptions="actionNext"
                android:maxLength="50"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorLoginDataFont"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="16dp"
            android:background="@color/colorUserAuthenticationDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/tvLastNameLabel" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvPasswordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorThemeIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/text_hint"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:padding="2dp"
                android:singleLine="true"
                android:textColor="@color/colorLoginDataFont"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/password"
            android:textColor="@color/colorThemeFont"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvUserNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        style="@style/AuthenticationButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/authentication_button_height"
        android:layout_marginBottom="130dp"
        android:enabled="false"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/panelDetail"
        app:layout_constraintStart_toStartOf="@+id/panelDetail" />

    <include
        android:id="@+id/pbSignUp"
        layout="@layout/lay_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />


</androidx.constraintlayout.widget.ConstraintLayout>